--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sunset-distance-4145",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "^2.2.4",
